# django-mailer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
mailer/: apps.py  utils.py
mailer/admin/: __init__.py  admin.py
mailer/management/commands/: mailer.py
mailer/migrations/: 0001_initial.py
mailer/models/: defs.py  interface.py  models.py
web/app/: settings.py  urls.py
